# ClawGUI

./: .gitignore  README.md  README_zh.md
.github/workflows/: clawgui-app-release.yml
clawgui-agent/: README.md  README_CN.md  main.py  setup.py  webui.py
clawgui-agent/phone_agent/: agent.py  skills_runtime.py  tracer.py
clawgui-app/: .gitignore  CHANGELOG.md  README.md  README_EN.md  SETUP.md  SETUP_EN.md  gradlew.bat  settings.gradle.kts
clawgui-app-ng/: SETUP.md
clawgui-app-ng/app/: build.gradle.kts
clawgui-app/app/: build.gradle.kts  proguard-rules.pro
clawgui-app/docs/: architecture-notes.md  diagnostics.md  feishu-setup.md
clawgui-eval/: Dockerfile  README.md  README_zh.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
clawgui-eval/judge/: grounding_judge.py  osworld_g_judge.py
clawgui-eval/metric/: androidcontrol_metric.py  osworldg_metric.py
clawgui-rl/: README.md  README_zh.md
clawgui-skills/: README.md  README_zh.md  pyproject.toml
clawgui-skills/clawgui_skills/: __init__.py  cli.py  config.py  evolution.py  file_tools.py  generator.py  intent.py  model_io.py  package.py  prompts.py  retriever.py  runtime.py  schema.py  store.py  verifier.py
clawgui-skills/clawgui_skills/adapters/: __init__.py  trace.py
clawgui-skills/examples/: demo_evolve_offline.py  demo_reuse_offline.py
clawgui-skills/tests/: test_runtime.py
openclaw-gui/: README.md  README_CN.md  README_EN.md
opengui-eval/: README.md  README_zh.md  main.py  pyproject.toml  requirements.txt
opengui-rl/: README.md  README_zh.md  requirements.txt  setup.py
(+293 files in other folders)
