[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clawgui-skills"
version = "0.1.0"
description = "Self-evolving GUI skill layer for ClawGUI"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
clawgui-skills = "clawgui_skills.cli:main"

[tool.setuptools.packages.find]
include = ["clawgui_skills*"]
